feat: Update references from Aegis Dashboard to Aegis HUB across multiple files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Aegis Dashboard - Herramienta de Investigación</title>
+  <title>Aegis HUB - Herramienta de Investigación</title>
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
@@ -40,7 +40,7 @@
           </path>
         </svg>
         <div class="d-flex flex-column">
-          <h1 class="mb-0" data-i18n="AEGIS_DASHBOARD">Aegis Dashboard</h1>
+          <h1 class="mb-0" data-i18n="AEGIS_DASHBOARD">Aegis HUB</h1>
           <small class="text-muted" data-i18n="INVESTIGATION_TOOL">Herramienta de Investigación</small>
         </div>
       </div>
