--- a/quickstart-new.html
+++ b/quickstart-new.html
@@ -1075,7 +1075,7 @@
                 Instalación
             </h2>
 
-            <p>El Aegis Dashboard es una aplicación web totalmente autónoma. Solo necesitas un navegador moderno.</p>
+            <p>El Aegis HUB es una aplicación web totalmente autónoma. Solo necesitas un navegador moderno.</p>
 
             <div class="code-block">
                 <pre><code># Opción 1: Abrir directamente
