--- a/quickstart.html
+++ b/quickstart.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guía Rápida - Aegis Dashboard</title>
+    <title>Guía Rápida - Aegis HUB</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
         rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta17/dist/css/tabler.min.css">
@@ -677,9 +677,7 @@
 </head>
 
 <body>
-        <div class="alert alert-warning" role="alert" style="margin: 1rem auto; max-width: 900px;">
-            <strong>⚠️ Seguridad:</strong> Nunca publiques ni compartas claves privadas, tokens o secretos (como los de Google reCAPTCHA) en la documentación, ejemplos, capturas ni foros públicos.
-        </div>
+
     <!-- Navbar -->
     <header class="navbar navbar-expand-lg navbar-dark sticky-top">
         <div class="container-xl px-3">
@@ -693,7 +691,7 @@
                     </path>
                 </svg>
                 <div class="d-flex flex-column">
-                    <h1 class="mb-0">Aegis Dashboard</h1>
+                    <h1 class="mb-0">Aegis HUB</h1>
                     <small class="text-muted" data-i18n="INVESTIGATION_TOOL">Herramienta de Investigación</small> 
                 </div>
             </div>
@@ -721,10 +719,10 @@
 
     <!-- Hero Section -->
     <div class="hero">
-        <h1 data-i18n="QS_HERO_TITLE">🛡️ Aegis Dashboard</h1>
+        <h1 data-i18n="QS_HERO_TITLE">🛡️ Aegis HUB</h1>
         <p data-i18n="QS_HERO_SUBTITLE">Centraliza 78 recursos OSINT en un solo lugar, detecta automáticamente el tipo de búsqueda y ahorra tiempo valioso en tus investigaciones.</p>
         <p style="margin-top: 1rem; font-size: 1.1rem; opacity: 0.9;" data-i18n="QS_HERO_READ_GUIDE">📖 Lee la guía de inicio rápido para las funcionalidades</p>
-        <a href="index.html" class="btn-primary" style="margin-top: 1.5rem;" data-i18n="QS_ACCESS_DASHBOARD">Ir a la Herramienta →</a>
+        <a href="index.html" class="btn-primary" style="margin-top: 1.5rem;" data-i18n="QS_ACCESS_DASHBOARD">Ir al HUB →</a>
     </div>
 
     <!-- Main Content -->
@@ -1092,7 +1090,7 @@
                 <span data-i18n="QS_INSTALLATION">Instalación</span>
             </h2>
 
-            <p data-i18n="QS_INSTALL_DESC">El Aegis Dashboard es una aplicación web totalmente autónoma. Solo necesitas un navegador moderno.</p>
+            <p data-i18n="QS_INSTALL_DESC">Aegis HUB es una aplicación web totalmente autónoma. Solo necesitas un navegador moderno.</p>
 
             <div class="code-block">
                 <pre><code id="installation-code"># Opción 1: Abrir directamente
@@ -1152,7 +1150,7 @@ http://localhost:8000</code></pre>
 
             <div class="faq-container">
                 <div class="faq-item">
-                    <h4 data-i18n="QS_FAQ_Q1">¿Es seguro usar el AEGIS Dashboard?</h4>
+                    <h4 data-i18n="QS_FAQ_Q1">¿Es seguro usar AEGIS HUB?</h4>
                     <p data-i18n="QS_FAQ_A1">Completamente seguro. No hay servidor backend. Todos los datos se almacenan localmente en tu navegador.</p>
                 </div>
 
@@ -1176,16 +1174,16 @@ http://localhost:8000</code></pre>
         <!-- CTA -->
         <section class="section text-center">
             <p class="cta-subtitle" data-i18n="QS_CTA_SUBTITLE">
-                Accede al Aegis Dashboard y realiza investigaciones profesionales
+                Accede a Aegis HUB y realiza investigaciones profesionales
             </p>
-            <a href="login.html" class="btn-primary" data-i18n="QS_CTA_BUTTON">Acceder al Dashboard</a>
+            <a href="login.html" class="btn-primary" data-i18n="QS_CTA_BUTTON">Acceder al HUB</a>
         </section>
     </div>
 
     <!-- Footer -->
     <footer class="footer">
         <p>
-            🛡️ Aegis Dashboard v1.7.2 |
+            🛡️ Aegis HUB v1.8.0 |
             <span class="badge badge-primary">HTML5</span>
             <span class="badge badge-primary">CSS3</span>
             <span class="badge badge-primary">JavaScript</span>
