feat: Update favicon across multiple HTML files

--- a/admin.html
+++ b/admin.html
@@ -9,7 +9,7 @@
         rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta17/dist/css/tabler.min.css">
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/plugins/favorites - Chrome/ico.png" type="image/png" />
     <style>
         /* Los estilos de botones se heredan de style.css */
         
