--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
         rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta17/dist/css/tabler.min.css">
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/plugins/favorites - Chrome/ico.png" type="image/png" />
     <!-- Google reCAPTCHA - Se cargará dinámicamente con el idioma correcto -->
     <script>
         // Cargar reCAPTCHA con idioma dinámico
