--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="/plugins/favorites - Chrome/ico.png" type="image/png" />
 
   <!-- SortableJS -->
   <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
