--- a/quickstart-new.html
+++ b/quickstart-new.html
@@ -2,6 +2,7 @@
 <html lang="es">
 
 <head>
+        <link rel="icon" href="/plugins/favorites - Chrome/ico.png" type="image/png" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guía Rápida - Aegis HUB</title>
