feat: Introduce component-based styling, integrate Vite, and update HTML structure and navbar classes.

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
   </div>
 
   <!-- Navbar Mejorada -->
-  <header class="navbar navbar-expand-lg navbar-dark sticky-top">
-    <div class="container-xxl px-3">
+  <header class="navbar sticky-top">
+    <div class="container-fluid px-4">
       <!-- Logo y Branding -->
       <div class="navbar-brand d-flex align-items-center">
         <svg class="icon-brand me-2" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor"
