--- a/quickstart.html
+++ b/quickstart.html
@@ -15,8 +15,8 @@
 <body>
 
     <!-- Navbar -->
-    <header class="navbar navbar-expand-lg navbar-dark sticky-top">
-        <div class="container-xl px-3">
+    <header class="navbar sticky-top">
+        <div class="container-fluid px-4">
             <div class="navbar-brand d-flex align-items-center">
                 <svg class="icon-brand me-2" width="32" height="32" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="1.5" role="img" aria-label="Aegis shield icon">
@@ -32,14 +32,17 @@
                     <small class="text-muted" data-i18n="INVESTIGATION_TOOL">Herramienta de Investigación</small>
                 </div>
             </div>
-            <div class="d-flex gap-2">
+            <div class="d-flex gap-3">
+                <a href="index.html" class="btn btn-ghost d-none d-md-flex" data-i18n="QS_ACCESS_DASHBOARD">Ir al
+                    HUB</a>
+
                 <!-- Tema -->
-                <button class="btn btn-outline-secondary" id="theme-toggle" title="Cambiar tema">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-moon" width="18" height="18"
+                <button class="btn btn-ghost p-2" id="theme-toggle" title="Cambiar tema">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-moon" width="20" height="20"
                         viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="display: none;">
                         <path d="M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1 -8.313 -12.454z"></path>
                     </svg>
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-sun" width="18" height="18"
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-sun" width="20" height="20"
                         viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <circle cx="12" cy="12" r="4"></circle>
                         <path
@@ -49,7 +52,7 @@
                 </button>
 
                 <!-- Idioma -->
-                <button class="btn btn-outline-secondary" id="language-toggle" title="Cambiar idioma">
+                <button class="btn btn-ghost p-2 fw-bold" id="language-toggle" title="Cambiar idioma">
                     <span id="current-lang">ES</span>
                 </button>
             </div>
@@ -577,10 +580,10 @@ http://localhost:8000</code></pre>
     <footer class="footer">
         <p>
             🛡️ Aegis HUB v1.8.0 |
-            <span class="badge badge-primary">HTML5</span>
-            <span class="badge badge-primary">CSS3</span>
-            <span class="badge badge-primary">JavaScript</span>
-            <span class="badge badge-success">2025</span>
+            <span class="badge bg-primary">HTML5</span>
+            <span class="badge bg-primary">CSS3</span>
+            <span class="badge bg-primary">JavaScript</span>
+            <span class="badge bg-success">2025</span>
         </p>
         <p class="footer-credits">
             <span data-i18n="QS_FOOTER_MADE_WITH">Hecho con ❤️ para la comunidad de seguridad -</span> <a
