--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>Aegis HUB - Herramienta de Investigación</title>
 
   <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet" />
 
   <!-- Tabler UI CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta17/dist/css/tabler.min.css">
@@ -39,162 +40,153 @@
           <path d="M9.5 10.5c.8.6 1.5.9 2.5.9s1.7-.3 2.5-.9" fill="none" stroke="currentColor" stroke-linecap="round">
           </path>
         </svg>
-        <div class="d-flex flex-column">
+        <div class="d-flex flex-column d-none d-md-flex">
           <h1 class="mb-0" data-i18n="AEGIS_DASHBOARD">Aegis HUB</h1>
           <small class="text-muted" data-i18n="INVESTIGATION_TOOL">Herramienta de Investigación</small>
         </div>
       </div>
 
-      <!-- Toggle para menú móvil -->
-      <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-menu"
-        title="Abrir menú">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <!-- Menú Principal -->
-      <div class="collapse navbar-collapse" id="navbar-menu">
-        <!-- Controles -->
-        <div class="navbar-controls d-flex gap-2 flex-wrap justify-content-lg-end ms-auto">
-          <!-- Search Bar -->
-          <form class="search-form d-flex">
-            <div class="input-icon">
-              <input type="text" id="search-input" class="form-control search-input"
-                placeholder="IP, dominio, hash, email..." autocomplete="off">
-              <span class="input-icon-addon">
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="20" height="20" viewBox="0 0 24 24"
-                  stroke-width="2" stroke="currentColor" fill="none">
-                  <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
-                  <path d="M21 21l-6 -6"></path>
-                </svg>
-              </span>
-            </div>
-            <button type="submit" class="btn btn-primary ms-2" data-i18n="SEARCH_BUTTON">
-              Buscar
-            </button>
-          </form>
-
-          <!-- Filter -->
+      <!-- Controles Centrales/Derecha -->
+      <div class="navbar-controls d-flex flex-grow-1 justify-content-end align-items-center gap-2">
+        <!-- Search Bar -->
+        <form class="search-form d-flex d-none d-lg-flex">
           <div class="input-icon">
-            <input type="text" id="filter-input" class="form-control filter-input" placeholder="Filtrar..."
-              style="max-width: 200px;">
+            <input type="text" id="search-input" class="form-control search-input"
+              placeholder="IP, dominio, hash, email..." autocomplete="off">
             <span class="input-icon-addon">
-              <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="18" height="18" viewBox="0 0 24 24"
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="20" height="20" viewBox="0 0 24 24"
                 stroke-width="2" stroke="currentColor" fill="none">
-                <path
-                  d="M4 4h16v2.172a2 2 0 0 1 -.586 1.414l-4.414 4.414v7l-6 2v-9l-4.414 -4.414a2 2 0 0 1 -.586 -1.414v-2.172z">
-                </path>
+                <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0"></path>
+                <path d="M21 21l-6 -6"></path>
               </svg>
             </span>
           </div>
-
-          <!-- Categorías Dropdown -->
-          <div class="dropdown">
-            <button class="btn btn-outline-primary dropdown-toggle" type="button" data-bs-toggle="dropdown"
-              data-i18n="CATEGORIES">
-              Categorías
-            </button>
-            <div class="dropdown-menu dropdown-menu-end" id="categories-dropdown">
-              <!-- Llenado dinámicamente -->
-            </div>
-          </div>
-
-          <!-- Tema -->
-          <button class="btn btn-outline-secondary" id="theme-toggle" title="Cambiar tema">
-            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-moon" width="18" height="18" viewBox="0 0 24 24"
-              fill="none" stroke="currentColor" stroke-width="2" style="display: none;">
-              <path d="M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1 -8.313 -12.454z"></path>
-            </svg>
-            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-sun" width="18" height="18" viewBox="0 0 24 24"
-              fill="none" stroke="currentColor" stroke-width="2">
-              <circle cx="12" cy="12" r="4"></circle>
-              <path
-                d="M12 2v2m0 16v2M4.93 4.93l1.41 1.41m11.32 11.32l1.41 1.41M2 12h2m16 0h2M4.93 19.07l1.41-1.41m11.32-11.32l1.41-1.41">
-              </path>
-            </svg>
+          <button type="submit" class="btn btn-primary ms-2" data-i18n="SEARCH_BUTTON">
+            Buscar
           </button>
+        </form>
 
-          <!-- Idioma -->
-          <button class="btn btn-outline-secondary" id="language-toggle" title="Cambiar idioma">
-            <span id="current-lang">ES</span>
-          </button>
-
-          <!-- Downdetector Button -->
-          <a href="https://downdetector.cl/" target="_blank" rel="noopener noreferrer" class="btn btn-outline-danger"
-            id="downdetector-btn" aria-label="Downdetector">
-            <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="18" height="18" viewBox="0 0 24 24" fill="none"
-              stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-              <path d="M12 9v4"></path>
-              <path
-                d="M10.363 3.591l-8.106 13.534a1.914 1.914 0 0 0 1.636 2.871h16.214a1.914 1.914 0 0 0 1.636 -2.87l-8.106 -13.536a1.914 1.914 0 0 0 -3.274 0z">
-              </path>
-              <path d="M12 16h.01"></path>
-            </svg>
-          </a>
-
-          <!-- Historial -->
-          <button class="btn btn-outline-secondary" onclick="toggleHistoryPanel()" title="Historial de búsquedas">
+        <!-- Filter -->
+        <div class="input-icon d-none d-xl-flex">
+          <input type="text" id="filter-input" class="form-control filter-input" placeholder="Filtrar..."
+            style="max-width: 150px;">
+          <span class="input-icon-addon">
             <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="18" height="18" viewBox="0 0 24 24"
               stroke-width="2" stroke="currentColor" fill="none">
-              <path d="M12 3c-4.97 0 -9 4.03 -9 9s4.03 9 9 9s9 -4.03 9 -9s-4.03 -9 -9 -9m0 2v6l5.25 3.15"></path>
-            </svg>
-          </button>
-
-          <!-- Favoritos -->
-          <button class="btn btn-warning" onclick="toggleFavoritesPanel()" title="Favoritos">
-            <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="18" height="18" viewBox="0 0 24 24"
-              fill="currentColor">
               <path
-                d="M8.243 7.34l-6.38 .925l-.113 .023a1 1 0 0 0 -.44 1.684l4.622 4.499l-1.09 6.355l-.013 .11a1 1 0 0 0 1.464 .944l5.706 -3l5.693 3l.1 .046a1 1 0 0 0 1.352 -1.1l-1.091 -6.355l4.624 -4.5l.078 -.085a1 1 0 0 0 -.633 -1.62l-6.38 -.926l-2.852 -5.78a1 1 0 0 0 -1.794 0l-2.853 5.78z">
+                d="M4 4h16v2.172a2 2 0 0 1 -.586 1.414l-4.414 4.414v7l-6 2v-9l-4.414 -4.414a2 2 0 0 1 -.586 -1.414v-2.172z">
               </path>
             </svg>
-            <span class="badge bg-warning text-dark" id="favorites-count">0</span>
+          </span>
+        </div>
+
+        <!-- Categorías Dropdown -->
+        <div class="dropdown d-none d-md-block">
+          <button class="btn btn-outline-primary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+            data-i18n="CATEGORIES">
+            Categorías
           </button>
-
-          <!-- User Menu -->
-          <div class="dropdown">
-            <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
-              <svg xmlns="http://www.w3.org/2000/svg" class="icon me-1" width="18" height="18" viewBox="0 0 24 24"
-                fill="none" stroke="currentColor" stroke-width="2">
-                <circle cx="12" cy="12" r="10"></circle>
-                <path d="M12 2v20M2 12h20"></path>
-              </svg>
-              <span id="user-display-name">Usuario</span>
-            </button>
-            <div class="dropdown-menu dropdown-menu-end">
-              <div class="dropdown-item disabled">
-                <small class="text-muted" id="user-email">email@example.com</small>
-              </div>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="admin.html" id="admin-link" style="display: none;">
-                <svg class="me-2" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                  stroke-width="2">
-                  <path d="M12 20h9"></path>
-                  <path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"></path>
-                </svg>
-                <span data-i18n="ADMIN_PANEL">Panel Admin</span>
-              </a>
-              <a class="dropdown-item" href="incidents.html" id="incidents-link" style="display: none;">
-                <svg class="me-2" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                  stroke-width="2">
-                  <path d="M12 2L4 6v6c0 5.25 3.5 10.2 8 12 4.5-1.8 8-6.75 8-12V6l-8-4z"></path>
-                  <path d="M12 8v4m0 4h.01"></path>
-                </svg>
-                <span data-i18n="INCIDENT_MANAGEMENT">Gestión de Incidencias</span>
-              </a>
-              <div class="dropdown-divider" id="admin-divider" style="display: none;"></div>
-              <a class="dropdown-item text-danger" href="#" onclick="handleLogout(event)">
-                <svg class="me-2" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                  stroke-width="2">
-                  <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
-                  <polyline points="16 17 21 12 16 7"></polyline>
-                  <line x1="21" y1="12" x2="9" y2="12"></line>
-                </svg>
-                <span data-i18n="LOGOUT">Cerrar Sesión</span>
-              </a>
-            </div>
+          <div class="dropdown-menu dropdown-menu-end" id="categories-dropdown">
+            <!-- Llenado dinámicamente -->
           </div>
+        </div>
 
-          <!-- File scan UI removed -->
+        <!-- Separador visual -->
+        <div class="vr mx-2 d-none d-lg-block"></div>
+
+        <!-- Tema -->
+        <button class="btn btn-icon btn-ghost" id="theme-toggle" title="Cambiar tema">
+          <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-moon" width="20" height="20" viewBox="0 0 24 24"
+            fill="none" stroke="currentColor" stroke-width="2" style="display: none;">
+            <path d="M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1 -8.313 -12.454z"></path>
+          </svg>
+          <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-sun" width="20" height="20" viewBox="0 0 24 24"
+            fill="none" stroke="currentColor" stroke-width="2">
+            <circle cx="12" cy="12" r="4"></circle>
+            <path
+              d="M12 2v2m0 16v2M4.93 4.93l1.41 1.41m11.32 11.32l1.41 1.41M2 12h2m16 0h2M4.93 19.07l1.41-1.41m11.32-11.32l1.41-1.41">
+            </path>
+          </svg>
+        </button>
+
+        <!-- Idioma -->
+        <button class="btn btn-ghost" id="language-toggle" title="Cambiar idioma">
+          <span id="current-lang">ES</span>
+        </button>
+
+        <!-- Downdetector Button -->
+        <a href="https://downdetector.cl/" target="_blank" rel="noopener noreferrer"
+          class="btn btn-icon btn-ghost text-danger" id="downdetector-btn" aria-label="Downdetector">
+          <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="20" height="20" viewBox="0 0 24 24" fill="none"
+            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M12 9v4"></path>
+            <path
+              d="M10.363 3.591l-8.106 13.534a1.914 1.914 0 0 0 1.636 2.871h16.214a1.914 1.914 0 0 0 1.636 -2.87l-8.106 -13.536a1.914 1.914 0 0 0 -3.274 0z">
+            </path>
+            <path d="M12 16h.01"></path>
+          </svg>
+        </a>
+
+        <!-- Historial -->
+        <button class="btn btn-icon btn-ghost" onclick="toggleHistoryPanel()" title="Historial de búsquedas">
+          <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="20" height="20" viewBox="0 0 24 24"
+            stroke-width="2" stroke="currentColor" fill="none">
+            <path d="M12 3c-4.97 0 -9 4.03 -9 9s4.03 9 9 9s9 -4.03 9 -9s-4.03 -9 -9 -9m0 2v6l5.25 3.15"></path>
+          </svg>
+        </button>
+
+        <!-- Favoritos -->
+        <button class="btn btn-icon btn-ghost text-warning position-relative" onclick="toggleFavoritesPanel()"
+          title="Favoritos">
+          <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="20" height="20" viewBox="0 0 24 24"
+            fill="currentColor">
+            <path
+              d="M8.243 7.34l-6.38 .925l-.113 .023a1 1 0 0 0 -.44 1.684l4.622 4.499l-1.09 6.355l-.013 .11a1 1 0 0 0 1.464 .944l5.706 -3l5.693 3l.1 .046a1 1 0 0 0 1.352 -1.1l-1.091 -6.355l4.624 -4.5l.078 -.085a1 1 0 0 0 -.633 -1.62l-6.38 -.926l-2.852 -5.78a1 1 0 0 0 -1.794 0l-2.853 5.78z">
+            </path>
+          </svg>
+          <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-warning text-dark"
+            id="favorites-count" style="font-size: 0.6rem; padding: 0.25em 0.4em;">0</span>
+        </button>
+
+        <!-- User Menu -->
+        <div class="dropdown ms-2">
+          <button class="btn btn-outline-secondary dropdown-toggle d-flex align-items-center" type="button"
+            data-bs-toggle="dropdown">
+            <div class="avatar avatar-xs me-2 d-none d-sm-flex">U</div>
+            <span id="user-display-name" class="d-none d-md-inline">Usuario</span>
+          </button>
+          <div class="dropdown-menu dropdown-menu-end">
+            <div class="dropdown-item disabled">
+              <small class="text-muted" id="user-email">email@example.com</small>
+            </div>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="admin.html" id="admin-link" style="display: none;">
+              <svg class="me-2" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                stroke-width="2">
+                <path d="M12 20h9"></path>
+                <path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"></path>
+              </svg>
+              <span data-i18n="ADMIN_PANEL">Panel Admin</span>
+            </a>
+            <a class="dropdown-item" href="incidents.html" id="incidents-link" style="display: none;">
+              <svg class="me-2" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                stroke-width="2">
+                <path d="M12 2L4 6v6c0 5.25 3.5 10.2 8 12 4.5-1.8 8-6.75 8-12V6l-8-4z"></path>
+                <path d="M12 8v4m0 4h.01"></path>
+              </svg>
+              <span data-i18n="INCIDENT_MANAGEMENT">Gestión de Incidencias</span>
+            </a>
+            <div class="dropdown-divider" id="admin-divider" style="display: none;"></div>
+            <a class="dropdown-item text-danger" href="#" onclick="handleLogout(event)">
+              <svg class="me-2" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                stroke-width="2">
+                <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
+                <polyline points="16 17 21 12 16 7"></polyline>
+                <line x1="21" y1="12" x2="9" y2="12"></line>
+              </svg>
+              <span data-i18n="LOGOUT">Cerrar Sesión</span>
+            </a>
+          </div>
         </div>
       </div>
     </div>
