feat: Add `data-i18n` attributes to the user display name, tooltips, and various panel and tab labels for internationalization.

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           <button class="btn btn-outline-secondary dropdown-toggle d-flex align-items-center" type="button"
             data-bs-toggle="dropdown">
             <div class="avatar avatar-xs me-2 d-none d-sm-flex">U</div>
-            <span id="user-display-name" class="d-none d-md-inline">Usuario</span>
+            <span id="user-display-name" class="d-none d-md-inline" data-i18n="USER_DEFAULT_NAME">Usuario</span>
           </button>
           <div class="dropdown-menu dropdown-menu-end">
             <div class="dropdown-item disabled">
@@ -214,7 +214,7 @@
     <aside class="sidebar" id="sidebar">
       <div class="sidebar-header d-flex justify-content-between align-items-center mb-3">
         <h5 class="mb-0" data-i18n="TOOLS">Herramientas</h5>
-        <button class="btn btn-icon btn-ghost btn-sm" onclick="toggleSidebar()" title="Colapsar barra lateral">
+        <button class="btn btn-icon btn-ghost btn-sm" onclick="toggleSidebar()" data-i18n-title="CLOSE_TOOLTIP">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <path d="M11 17l-5-5 5-5M18 17l-5-5 5-5" />
@@ -253,7 +253,7 @@
             <path d="M12 3v6m0 6v6"></path>
             <path d="M3 12h6m6 0h6"></path>
           </svg>
-          Herramientas
+          <span data-i18n="TOOLS">Herramientas</span>
         </button>
         <button class="tab-btn" data-view="favorites" data-i18n="FAVORITES">
           <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="18" height="18" viewBox="0 0 24 24"
@@ -262,7 +262,7 @@
               d="M8.243 7.34l-6.38 .925l-.113 .023a1 1 0 0 0 -.44 1.684l4.622 4.499l-1.09 6.355l-.013 .11a1 1 0 0 0 1.464 .944l5.706 -3l5.693 3l.1 .046a1 1 0 0 0 1.352 -1.1l-1.091 -6.355l4.624 -4.5l.078 -.085a1 1 0 0 0 -.633 -1.62l-6.38 -.926l-2.852 -5.78a1 1 0 0 0 -1.794 0l-2.853 5.78z">
             </path>
           </svg>
-          Favoritos
+          <span data-i18n="FAVORITES">Favoritos</span>
         </button>
         <button class="tab-btn" data-view="results">
           <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="18" height="18" viewBox="0 0 24 24"
@@ -277,7 +277,7 @@
             stroke-width="2" stroke="currentColor" fill="none">
             <path d="M12 3c-4.97 0 -9 4.03 -9 9s4.03 9 9 9s9 -4.03 9 -9s-4.03 -9 -9 -9m0 2v6l5.25 3.15"></path>
           </svg>
-          Historial
+          <span data-i18n="HISTORY">Historial</span>
         </button>
       </div>
 
@@ -337,8 +337,8 @@
     <!-- Panel Lateral Derecho (Historial y Favoritos) -->
     <aside class="right-panel" id="right-panel">
       <div class="panel-header">
-        <h5 id="panel-title">Historial</h5>
-        <button class="btn btn-sm btn-ghost" onclick="closeRightPanel()" title="Cerrar panel">
+        <h5 id="panel-title" data-i18n="HISTORY">Historial</h5>
+        <button class="btn btn-sm btn-ghost" onclick="closeRightPanel()" data-i18n-title="CLOSE_TOOLTIP">
           <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="20" height="20" viewBox="0 0 24 24"
             stroke-width="2" stroke="currentColor" fill="none">
             <path d="M6 18l12 -12m-12 0l12 12"></path>
