--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="src/css/main.css" />
+  <!-- SweetAlert2 -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <link rel="icon" href="plugins/favorites - Chrome/ico.png" type="image/png" />
 
   <!-- SortableJS -->
