feat: Implement new UI layout, theming, and component styles, and add authentication logic with login page updates.

--- a/login.html
+++ b/login.html
@@ -7,6 +7,8 @@
     <title>Login - Aegis HUB</title>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet" />
+    <!-- SweetAlert2 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="src/css/main.css" />
     <link rel="stylesheet" href="src/css/login.css" />
     <link rel="icon" href="plugins/favorites - Chrome/ico.png" type="image/png" />
