--- a/index.html
+++ b/index.html
@@ -338,9 +338,9 @@
 
     <!-- Panel Lateral Derecho (Historial y Favoritos) -->
     <aside class="right-panel" id="right-panel">
-      <div class="panel-header">
-        <h5 id="panel-title" data-i18n="HISTORY">Historial</h5>
-        <button class="btn btn-sm btn-ghost" onclick="closeRightPanel()" data-i18n-title="CLOSE_TOOLTIP">
+      <div class="panel-header d-flex justify-content-between align-items-center">
+        <h5 id="panel-title" class="mb-0" data-i18n="HISTORY">Historial</h5>
+        <button class="btn btn-sm btn-ghost p-1" onclick="closeRightPanel()" data-i18n-title="CLOSE_TOOLTIP">
           <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="20" height="20" viewBox="0 0 24 24"
             stroke-width="2" stroke="currentColor" fill="none">
             <path d="M6 18l12 -12m-12 0l12 12"></path>
