--- a/index.html
+++ b/index.html
@@ -216,7 +216,8 @@
     <aside class="sidebar" id="sidebar">
       <div class="sidebar-header d-flex justify-content-between align-items-center mb-3">
         <h5 class="mb-0" data-i18n="TOOLS">Herramientas</h5>
-        <button class="btn btn-icon btn-ghost btn-sm" onclick="toggleSidebar()" data-i18n-title="CLOSE_TOOLTIP">
+        <button id="toggle-sidebar-btn" class="btn btn-icon btn-ghost btn-sm" onclick="toggleSidebar()"
+          data-i18n-title="CLOSE_SIDEBAR">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <path d="M11 17l-5-5 5-5M18 17l-5-5 5-5" />
@@ -339,7 +340,7 @@
     <!-- Panel Lateral Derecho (Historial y Favoritos) -->
     <aside class="right-panel" id="right-panel">
       <div class="panel-header d-flex justify-content-between align-items-center">
-        <h5 id="panel-title" class="mb-0" data-i18n="HISTORY">Historial</h5>
+        <h5 id="panel-title" class="mb-0">Historial</h5>
         <button class="btn btn-sm btn-ghost p-1" onclick="closeRightPanel()" data-i18n-title="CLOSE_TOOLTIP">
           <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="20" height="20" viewBox="0 0 24 24"
             stroke-width="2" stroke="currentColor" fill="none">
