feat: Implement the core OSINT dashboard application, including main JavaScript logic, HTML structure, and component styling.

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 
     <!-- Panel Lateral Derecho (Historial y Favoritos) -->
     <aside class="right-panel" id="right-panel">
-      <div class="panel-header d-flex justify-content-between align-items-center">
+      <div class="panel-header d-flex justify-content-between align-items-center mb-4">
         <h5 id="panel-title" class="mb-0">Historial</h5>
         <button class="btn btn-sm btn-ghost p-1" onclick="closeRightPanel()" data-i18n-title="CLOSE_TOOLTIP">
           <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="20" height="20" viewBox="0 0 24 24"
