--- a/index.html
+++ b/index.html
@@ -561,9 +561,11 @@
       <div class="row align-items-center">
         <div
           class="col-12 text-center text-md-start d-flex flex-column flex-md-row justify-content-between align-items-center gap-3">
-          <small class="text-muted">
-            🛡️ Aegis HUB - <span data-i18n="INVESTIGATION_TOOL">Herramienta de Investigación</span> - by s3codecL
-          </small>
+          <div class="footer-branding d-flex flex-column align-items-center align-items-md-start">
+            <small class="text-muted fw-bold" data-i18n="FOOTER_TEXT">🛡️ Aegis HUB v1.8.0 | 2025</small>
+            <small class="text-muted opacity-75" data-i18n="FOOTER_MADE_WITH">Hecho con ❤️ para la comunidad de
+              seguridad - s3codecL</small>
+          </div>
           <div class="social-links">
             <a href="https://github.com/s3codecL" target="_blank" rel="noopener noreferrer" title="GitHub">
               <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="currentColor">
