feat: introduce core layout styling and initial internationalization support.

--- a/index.html
+++ b/index.html
@@ -559,9 +559,8 @@
   <footer class="footer mt-auto py-4">
     <div class="container-fluid px-3">
       <div class="row align-items-center">
-        <div
-          class="col-12 text-center text-md-start d-flex flex-column flex-md-row justify-content-between align-items-center gap-3">
-          <div class="footer-branding d-flex flex-column align-items-center align-items-md-start">
+        <div class="col-12 text-center d-flex flex-column align-items-center gap-3">
+          <div class="footer-branding d-flex flex-column align-items-center">
             <small class="text-muted fw-bold" data-i18n="FOOTER_TEXT">🛡️ Aegis HUB v1.8.0 | 2025</small>
             <small class="text-muted opacity-75" data-i18n="FOOTER_MADE_WITH">Hecho con ❤️ para la comunidad de
               seguridad - s3codecL</small>
