--- a/index.html
+++ b/index.html
@@ -561,9 +561,8 @@
       <div class="row align-items-center">
         <div class="col-12 text-center d-flex flex-column align-items-center gap-3">
           <div class="footer-branding d-flex flex-column align-items-center">
-            <small class="text-muted fw-bold" data-i18n="FOOTER_TEXT">🛡️ Aegis HUB v1.8.0 | 2025</small>
-            <small class="text-muted opacity-75" data-i18n="FOOTER_MADE_WITH">Hecho con ❤️ para la comunidad de
-              seguridad - s3codecL</small>
+            <small class="text-muted fw-bold" data-i18n="FOOTER_TEXT"></small>
+            <small class="text-muted opacity-75" data-i18n="FOOTER_MADE_WITH"></small>
           </div>
           <div class="social-links">
             <a href="https://github.com/s3codecL" target="_blank" rel="noopener noreferrer" title="GitHub">
