--- a/admin.html
+++ b/admin.html
@@ -10,13 +10,16 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/core@1.0.0-beta17/dist/css/tabler.min.css">
     <link rel="stylesheet" href="src/css/main.css" />
     <link rel="stylesheet" href="src/css/admin.css" />
+    <!-- SweetAlert2 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="icon" href="plugins/favorites - Chrome/ico.png" type="image/png" />
 </head>
 
 <body data-bs-theme="dark">
-    <!-- Navbar -->
-    <header class="navbar navbar-expand-lg navbar-dark sticky-top">
-        <div class="container-xxl px-3">
+    <!-- Navbar Mejorada -->
+    <header class="navbar sticky-top">
+        <div class="container-fluid px-4">
+            <!-- Logo y Branding -->
             <div class="navbar-brand d-flex align-items-center">
                 <svg class="icon-brand me-2" width="32" height="32" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="1.5" role="img" aria-label="Aegis shield icon">
@@ -26,20 +29,21 @@
                     <path d="M9.5 10.5c.8.6 1.5.9 2.5.9s1.7-.3 2.5-.9" fill="none" stroke="currentColor"
                         stroke-linecap="round"></path>
                 </svg>
-                <div class="d-flex flex-column">
+                <div class="d-flex flex-column d-none d-md-flex">
                     <h1 class="mb-0" data-i18n="ADMIN_PANEL_TITLE">Panel de Administración</h1>
                     <small class="text-muted" data-i18n="USER_MANAGEMENT">Gestión de Usuarios</small>
                 </div>
             </div>
 
-            <div class="navbar-nav ms-auto d-flex flex-row align-items-center gap-2">
+            <!-- Controles Derecha -->
+            <div class="navbar-controls d-flex flex-grow-1 justify-content-end align-items-center gap-2">
                 <!-- Tema -->
-                <button class="btn btn-outline-secondary" id="theme-toggle" title="Cambiar tema">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-moon" width="18" height="18"
+                <button class="btn btn-icon btn-ghost" id="theme-toggle" title="Cambiar tema">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-moon" width="20" height="20"
                         viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="display: none;">
                         <path d="M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1 -8.313 -12.454z"></path>
                     </svg>
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-sun" width="18" height="18"
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-sun" width="20" height="20"
                         viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <circle cx="12" cy="12" r="4"></circle>
                         <path
@@ -49,46 +53,70 @@
                 </button>
 
                 <!-- Idioma -->
-                <button class="btn btn-outline-secondary" id="language-toggle" title="Cambiar idioma">
+                <button class="btn btn-ghost" id="language-toggle" title="Cambiar idioma">
                     <span id="current-lang">ES</span>
                 </button>
 
+                <div class="vr mx-2 d-none d-md-block"></div>
+
                 <div class="dropdown">
-                    <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="icon me-1" width="18" height="18"
-                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <circle cx="12" cy="12" r="10"></circle>
-                            <path d="M12 2v20M2 12h20"></path>
+                    <button class="btn btn-user-profile dropdown-toggle" type="button" id="userDropdown"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        <div class="user-avatar">
+                            <span id="userInitial">A</span>
+                        </div>
+                        <span class="user-name d-none d-md-inline" id="admin-name">Administrador</span>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-chevron-down ms-1" width="14"
+                            height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M6 9l6 6 6-6"></path>
                         </svg>
-                        <span id="admin-name">Admin</span>
                     </button>
-                    <div class="dropdown-menu dropdown-menu-end">
-                        <a class="dropdown-item" href="index.html">
-                            <svg class="me-2" width="16" height="16" viewBox="0 0 24 24" fill="none"
-                                stroke="currentColor" stroke-width="2">
-                                <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
-                            </svg>
-                            Dashboard
-                        </a>
-                        <a class="dropdown-item" href="incidents.html">
-                            <svg class="me-2" width="16" height="16" viewBox="0 0 24 24" fill="none"
-                                stroke="currentColor" stroke-width="2">
-                                <path d="M12 2L4 6v6c0 5.25 3.5 10.2 8 12 4.5-1.8 8-6.75 8-12V6l-8-4z"></path>
-                                <path d="M12 8v4m0 4h.01"></path>
-                            </svg>
-                            <span data-i18n="INCIDENT_MANAGEMENT">Gestión de Incidencias</span>
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item text-danger" href="#" onclick="handleLogout(event)">
-                            <svg class="me-2" width="16" height="16" viewBox="0 0 24 24" fill="none"
-                                stroke="currentColor" stroke-width="2">
-                                <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
-                                <polyline points="16 17 21 12 16 7"></polyline>
-                                <line x1="21" y1="12" x2="9" y2="12"></line>
-                            </svg>
-                            <span data-i18n="LOGOUT">Cerrar Sesión</span>
-                        </a>
-                    </div>
+                    <ul class="dropdown-menu dropdown-menu-end shadow-lg border-0 dropdown-menu-user"
+                        aria-labelledby="userDropdown">
+                        <li>
+                            <div class="dropdown-header-user" id="admin-email">admin@aegis.local</div>
+                        </li>
+                        <li>
+                            <hr class="dropdown-divider-user">
+                        </li>
+                        <li>
+                            <a class="dropdown-item dropdown-item-user" href="admin.html">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round">
+                                    <path d="M12 20h9"></path>
+                                    <path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"></path>
+                                </svg>
+                                <span>Panel Admin</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item dropdown-item-user" href="incidents.html">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round">
+                                    <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path>
+                                </svg>
+                                <span data-i18n="INCIDENT_MANAGEMENT">Gestión de Incidencias</span>
+                            </a>
+                        </li>
+                        <li>
+                            <hr class="dropdown-divider-user">
+                        </li>
+                        <li>
+                            <a class="dropdown-item dropdown-item-user text-danger" href="#"
+                                onclick="handleLogout(event)">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round">
+                                    <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
+                                    <polyline points="16 17 21 12 16 7"></polyline>
+                                    <line x1="21" y1="12" x2="9" y2="12"></line>
+                                </svg>
+                                <span data-i18n="LOGOUT">Cerrar Sesión</span>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -331,12 +359,15 @@
             loadStats();
             loadUsers();
 
-            // Mostrar nombre del admin
-            const currentUser = Auth.getCurrentUser();
-            document.getElementById('admin-name').textContent = currentUser.name;
-
             // Configurar formulario
             document.getElementById('user-form').addEventListener('submit', handleUserFormSubmit);
+
+            // Actualizar información de usuario
+            if (currentUser) {
+                document.getElementById('admin-email').textContent = currentUser.email;
+                const initial = currentUser.name.charAt(0).toUpperCase();
+                document.getElementById('userInitial').textContent = initial;
+            }
         });
 
         // Actualizar iconos de tema
@@ -365,7 +396,7 @@
                     if (element.tagName === 'INPUT' || element.tagName === 'TEXTAREA') {
                         element.placeholder = trans[key];
                     } else {
-                        element.textContent = trans[key];
+                        element.innerHTML = trans[key];
                     }
                 }
             });
@@ -579,9 +610,25 @@
         // Cerrar sesión
         window.handleLogout = function (e) {
             e.preventDefault();
-            if (confirm('¿Estás seguro de que deseas cerrar sesión?')) {
-                Auth.logout();
-            }
+            const lang = localStorage.getItem('osintLanguage') || 'es';
+            const theme = document.documentElement.getAttribute('data-bs-theme') || 'dark';
+
+            Swal.fire({
+                title: lang === 'en' ? 'Are you sure?' : '¿Estás seguro?',
+                text: lang === 'en' ? 'Do you want to logout?' : '¿Deseas cerrar sesión?',
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: lang === 'en' ? 'Yes, logout' : 'Sí, cerrar sesión',
+                cancelButtonText: lang === 'en' ? 'Cancel' : 'Cancelar',
+                background: theme === 'dark' ? '#1a1f3c' : '#fff',
+                color: theme === 'dark' ? '#fff' : '#000'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    Auth.logout();
+                }
+            });
         }
     </script>
     <!-- Footer -->
